K8s/deployment-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: fx-trading
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: adesojialu/api-gateway
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"        
              memory: "128Mi"    
            limits:
              cpu: "250m"        
              memory: "256Mi"
