K8s/deployment-fx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-service
  namespace: fx-trading
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fx-service
  template:
    metadata:
      labels:
        app: fx-service
    spec:
      containers:
        - name: fx-service
          image: adesojialu/fx-service
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"        
              memory: "128Mi"    
            limits:
              cpu: "250m"        
              memory: "256Mi"
