K8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: fx-trading
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              cpu: "100m"        
              memory: "128Mi"    
            limits:
              cpu: "250m"        
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: fx-trading
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
    - port: 15672
      targetPort: 15672
