K8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fx-trading
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "100m"       
              memory: "128Mi" 
            limits:
              cpu: "250m"       
              memory: "256Mi"  

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: fx-trading
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
